# Games_cpp

./: .gitignore  CMakeLists.txt  Games.cpp  Pong.cpp  README.md  Shooter.cpp  Snakes.cpp  classBonus.cpp  classBullet.cpp  classBullet.h  classEnemy.cpp  classEnemy.h  classPong.cpp  classPong.h  classShooter.cpp  classShooter.h  classSnake.cpp  classSnake.h  classSnakes.cpp  game.cpp  game.h  input.cpp  input.h  mainPong.cpp  mainSnacks.cpp  main_copie_test.cpp
executable/: Games  Pong  Shooter  Snakes  main
header/: classBonus.h  classBullet.h  classEnemy.h  classPong.h  classShooter.h  classSnakes.h
lib/: libsfml-audio.2.5.1.dylib  libsfml-graphics.2.5.1.dylib  libsfml-network.2.5.1.dylib  libsfml-system.2.5.1.dylib  libsfml-window.2.5.1.dylib
lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
